# genSeq

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  genClassDS.cpp
